# pendulum

./: CMakeLists.txt  LICENSE  README.md
src/: pendulum.c  pendulum.h
